--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <p>Signorina by Salvatore Ferragamo is a Floral Fruity fragrance for women. Signorina was launched in 2011. Signorina was created by Sophie Labbe and Juliette Karagueuzoglou. Top notes are Red Currant and Pink Pepper; middle notes are Rose, Peony and Jasmine; base notes are Panacotta, Musk and Patchouli.</p>
   </article>
 </article></div>  
-  <div class="item4"> <img src="P1.Jpeg" alt="P1" width="150" height="200"> <br />
-  <img src="P2.jpeg" alt="P2" width="150" height="200"> <br />
-     <img src="P3.jpeg" alt="p3" width="150" height="200"> <br /> 
+  <div class="item4"> <img src="P1.Jpg" alt="P1" width="150" height="200"> <br />
+  <img src="P2.jpg" alt="P2" width="150" height="200"> <br />
+     <img src="P3.jpg" alt="p3" width="150" height="200"> <br /> 
   
   </div>
   <div class="item5">  <p>Quynhho, 2021<br />
